tests/baselines/reference/tsxSpreadAttributesResolution14.errors.txt
file.tsx(11,38): error TS2551: Property 'Property1' does not exist on type 'IntrinsicAttributes & AnotherComponentProps'. Did you mean 'property1'?


==== file.tsx (1 errors) ====
    import React = require('react');
    
    interface ComponentProps {
        property1: string;
        property2: number;
    }
    
    export default function Component(props: ComponentProps) {
        return (
            // Error extra property
            <AnotherComponent {...props} Property1/>
                                         ~~~~~~~~~
!!! error TS2551: Property 'Property1' does not exist on type 'IntrinsicAttributes & AnotherComponentProps'. Did you mean 'property1'?
        );
    }
    
    interface AnotherComponentProps {
        property1: string;
    }
    
    function AnotherComponent({ property1 }: AnotherComponentProps) {
        return (
            <span>{property1}</span>
        );
    }